# chess

./: .clang-tidy  .clang-uml  .gitignore  CMakeLists.txt  DOCS.md  README.md  generate_docs.sh  imgui.ini
.github/workflows/: build.yml
assets/models/bishop/: bishop.mtl
glimac/: CMakeLists.txt
lib/quick_imgui/: CMakeLists.txt
lib/quick_imgui/src/: ImGuiWrapper.cpp
src/: main.cpp
src/Logic/: AI.cpp  AI.hpp  AIController.cpp  AIController.hpp  Board.cpp  Board.hpp  Game.cpp  Game.hpp  IGameRule.hpp  Piece.hpp
src/Logic/Rules/: BernoulliRule.cpp  BernoulliRule.hpp  BinomialRule.cpp  BinomialRule.hpp  ExponentialRule.cpp  ExponentialRule.hpp  GaussianRule.cpp  GaussianRule.hpp  GeometricRule.cpp  GeometricRule.hpp  LogisticRule.cpp  LogisticRule.hpp  PermutationRule.cpp  PermutationRule.hpp  PoissonRule.cpp  PoissonRule.hpp  WeibullRule.cpp  WeibullRule.hpp
src/View/: BoardRenderer.cpp  BoardRenderer.hpp  ChessView.cpp  ChessView.hpp  ChessView2D.cpp  ChessView2D.hpp  ChessView3D.cpp  ChessView3D.hpp  MenuView.cpp  MenuView.hpp  Model3D.cpp  Model3D.hpp  PieceRenderer.cpp  PieceRenderer.hpp  Skybox.cpp  Skybox.hpp  ViewContext.hpp
src/View/3D/: BoardRenderer.cpp  BoardRenderer.hpp  ChessVisualState.cpp  ChessVisualState.hpp  CubeMesh.cpp  CubeMesh.hpp  Framebuffer.cpp  Framebuffer.hpp  ICamera.hpp  Model3D.cpp  MousePicker.cpp  MousePicker.hpp  PieceRenderer.cpp  PieceRenderer.hpp  PovCamera.cpp  PovCamera.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Skybox.cpp  Skybox.hpp  TrackballCamera.cpp  TrackballCamera.hpp  VictoryAnimator.cpp  VictoryAnimator.hpp
src/shaders/: chess3D.fs.glsl  chess3D.vs.glsl  skybox.fs.glsl  skybox.vs.glsl
tests/: test_logic.cpp
